fixed: IDF z-index issue

--- a/src/app/page/discussions/group-feed/group-feed.component.css
+++ b/src/app/page/discussions/group-feed/group-feed.component.css
@@ -9,7 +9,7 @@
 
     background-color: rgba(245, 247, 250, 0.9);
 
-    z-index: 99;
+    z-index: 50;
 
     display: flex;
     align-items: center;
